syntax="proto3";

package greet;

service GreetService {

    // unary API
    rpc Greet(GreetRequest) returns (GreetResponse) {}

    // Server streaming RPC
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}

    // Client streaming RPC
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}

    // BiDi streaming RPC
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {}
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}   

message LongGreetRequest {
    Greeting greet = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}